K8sYaml/ingress-resource-managers.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  namespace: hotelmanagers
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: api.birdbook.live
    http:
      paths:
      - pathType: Prefix
        path: "/login"
        backend:
          service:
            name: hotel-authentication
            port:
              number: 80
      - pathType: Prefix
        path: "/countries"
        backend:
          service:
            name: hotel-authentication
            port:
              number: 80
      - pathType: Prefix
        path: "/register"
        backend:
          service:
            name: hotel-authentication
            port:
              number: 80
      - pathType: Prefix
        path: "/healthz"
        backend:
          service:
            name: hotel-authentication
            port:
              number: 80
      - pathType: Prefix
        path: "/manage"
        backend:
          service:
            name: hotel-management
            port:
              number: 80
      - pathType: Prefix
        path: "/reports"
        backend:
          service:
            name: hotel-occupancy
            port:
              number: 80
      - pathType: Prefix
        path: "/reservations"
        backend:
          service:
            name:  hotel-reservations
            port:
              number: 80

      - pathType: Prefix
        path: "/users/login"
        backend:
          service:
            name: user-authentication
            namespace: hotelusers
            port:
              number: 80
