K8sYaml/ingress-resource-users.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-users
  namespace: 	hotelusers
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: api-users.birdbook.live
    http:
      paths:
      - pathType: Prefix
        path: "/users"
        backend:
          service:
            name: user-authentication
            port:
              number: 80
